--- a/src/GremlinORM/GremlinORM.csproj
+++ b/src/GremlinORM/GremlinORM.csproj
@@ -13,6 +13,10 @@
 
   <ItemGroup>
     <PackageReference Include="Gremlin.Net" Version="3.4.7" />
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
