Mid-point working on incorporating GraphSet — moving to another machine

--- a/sample/GremlinORMSample/GremlinORMSample.csproj
+++ b/sample/GremlinORMSample/GremlinORMSample.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\GremlinORM.Cosmos\GremlinORM.Cosmos.csproj" />
     <ProjectReference Include="..\..\src\GremlinORM\GremlinORM.csproj" />
   </ItemGroup>
 
