--- a/src/GremlinORM/GremlinORM.csproj
+++ b/src/GremlinORM/GremlinORM.csproj
@@ -4,19 +4,23 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>TaleLearnCode.GremlinORM</AssemblyName>
     <Version>0.0.0-Alpha</Version>
-    <Authors>TaleLearnCode</Authors>
+    <Authors>Green Events &amp; Technology LLC</Authors>
     <Description>ORM (Object-Relational Mapping) for .NET projects using a Gremlin database repository.</Description>
     <Copyright>Copyright ©2020 by Green Events &amp; Technology LLC. All rights reserved.</Copyright>
     <NeutralLanguage>en-US</NeutralLanguage>
     <RootNamespace>TaleLearnCode.GremlinORM</RootNamespace>
   </PropertyGroup>
-
+  <PropertyGroup>
+    <LangVersion>8.0</LangVersion>
+    <Company>Green Events &amp; Technology LLC</Company>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Gremlin.Net" Version="3.4.7" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
 
 </Project>
